Ace value 1/11 logic completed and tested. Play buttons configured to disappear upon game completion. CSS tidied to ensure that whole game is visible on 13 inch MBP screen. README file created but not completed.

--- a/main.css
+++ b/main.css
@@ -266,7 +266,7 @@ body{
 .dealer-cards{
     background-color: white;
     fill: white;
-    height: 10rem;
+    height: 8rem;
     border-style: solid;
     border-color: gold;
     border-width: 5px;
@@ -278,7 +278,7 @@ body{
 .player-cards{
     background-color: white;
     fill: white;
-    height: 10rem;
+    height: 8rem;
     border-style: solid;
     border-color: gold;
     border-width: 5px;
